Fixed logo issue on smaller devices

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -72,16 +72,14 @@ body{
         font-size: 1.9em;
         word-spacing: -5px;
         -webkit-text-stroke: 0;
-        background-image: url("../assets/img/colors/blue/logo.png");
+        background-image: url("/assets/img/colors/blue/logo.png");
         padding-left: 5px;
     }
 }
 @media (max-width: 400px) {
     .navbar-default .navbar-brand {
-        background-image: url("../assets/img/colors/blue/logo.png") !important;
         padding-left: 0;
-        background-repeat: no-repeat;
-        background-position: left center;
+        background:  url("/assets/img/colors/blue/logo.png") no-repeat left center !important;
     }
 }
 .navbar-default .navbar-brand{  min-width: 150px;  } /* Enforce width for logo */
